--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/meetup?serverTimezone=Asia/Seoul
     username: root
-    password: 1013
+    password: ${password}
 
   jpa:
     show-sql: true
