Chore JWT 디펜던시 추가 및 환경 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,10 @@ kakao:
   client_id: ${kakao_client_id}
   redirect_uri: ${kakao_redirect_uri}
   client_secret: ${kakao_client_secret}
+
+jwt:
+  access:
+    hour: 1
+  refresh:
+    hour: 12
+  secret: ${jwt_secret}
